--- a/src/content/graphos/org/sso/oidc-integration-guide.mdx
+++ b/src/content/graphos/org/sso/oidc-integration-guide.mdx
@@ -15,6 +15,8 @@ This feature is not available as part of an [Enterprise trial](../plans/#enterpr
 
 This guide walks through configuring a generic OpenID Connect (OIDC) based identity provider (IdP) for use with Apollo SSO.
 
+If you use Microsoft Entra ID as your IdP, instead see [this guide](./microsoft-entra-id-integration-oidc-guide/).
+
 <SSOMigrationNotice />
 
 # Setup
