Clean up shared admonitions

--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -121,9 +121,12 @@ You can integrate GraphOS with your organization's identity provider (IdP) to en
 
 SSO configuration is available for the following:
 
-- [Okta](../org/sso/okta-integration-guide/)
-- [Microsoft Entra ID](../org/sso/microsoft-entra-id-integration-guide/) (formerly known as Azure Active Directory)
+- [Okta (SAML-based)](../org/sso/okta-integration-guide/)
+- Microsoft Entra ID (formerly known as Azure Active Directory)
+  - [SAML-based](./microsoft-entra-id-integration-saml-guide)
+  - [OIDC-based](./microsoft-entra-id-integration-oidc-guide)
 - [Generic SAML](../org/sso/saml-integration-guide/)
+- [Generic OIDC](../org/sso/oidc-integration-guide/)
 
 <Note>
 
