--- a/src/content/graphos/org/sso/oidc-integration-guide.mdx
+++ b/src/content/graphos/org/sso/oidc-integration-guide.mdx
@@ -4,12 +4,7 @@ subtitle: Configure an OIDC-based identity provider
 description: Configure a OpenID Connect (OIDC) based identity provider as your Apollo GraphOS organization's SSO provider.
 ---
 
-<PremiumFeature>
-
-Single sign-on (SSO) is available only for [Dedicated and Enterprise plans](https://www.apollographql.com/pricing#security).
-This feature is not available as part of an [Enterprise trial](../plans/#enterprise-trials).
-
-</PremiumFeature>
+<SSOPremiumFeature />
 
 <SSOPreviewNotice />
 
