--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -4,12 +4,7 @@ subtitle: Configure Okta as your GraphOS organization's identity provider
 description: Configure Okta as your Apollo GraphOS organization's SSO provider with this SAML setup guide.
 ---
 
-<PremiumFeature >
-
-Single sign-on (SSO) is available only for [Dedicated and Enterprise plans](https://www.apollographql.com/pricing#security).
-This feature is not available as part of an [Enterprise trial](../plans/#enterprise-trials).
-
-</PremiumFeature>
+<SSOPremiumFeature />
 
 <SSOPreviewNotice />
 
