--- a/src/content/graphos/org/sso/microsoft-entra-id-integration-saml-guide.mdx
+++ b/src/content/graphos/org/sso/microsoft-entra-id-integration-saml-guide.mdx
@@ -4,12 +4,7 @@ subtitle: Configure Entra ID as your GraphOS organization's identity provider
 description: Configure Microsoft Entra ID (formerly Azure AD) as your Apollo GraphOS organization's SAML SSO provider with this SAML setup guide.
 ---
 
-<PremiumFeature>
-
-Single sign-on (SSO) is available only for [Dedicated and Enterprise plans](https://www.apollographql.com/pricing#security).
-This feature is not available as part of an [Enterprise trial](../plans/#enterprise-trials).
-
-</PremiumFeature>
+<SSOPremiumFeature />
 
 <SSOPreviewNotice />
 
