--- a/src/content/graphos/org/sso/multi-organization.mdx
+++ b/src/content/graphos/org/sso/multi-organization.mdx
@@ -4,12 +4,7 @@ subtitle: Switch between organizations in GraphOS Studio without needing to reau
 description: Set up multi-organization SSO to switch between organizations in GraphOS Studio without needing to reauthenticate.
 ---
 
-<PremiumFeature>
-
-Single sign-on (SSO) is available only for [Dedicated and Enterprise plans](https://www.apollographql.com/pricing#security).
-This feature is not available as part of an [Enterprise trial](../plans/#enterprise-trials).
-
-</PremiumFeature>
+<SSOPremiumFeature />
 
 <PreviewFeature>
 
@@ -23,9 +18,12 @@ Different GraphOS organizations can share the same identity provider (IdP) and S
 
 For multi-organization SSO, each organization needs to individually configure SSO according to the latest instructions (as of April 2024) for their particular IdP:
 
-- [Okta](./okta-integration-guide)
-- [Microsoft Entra ID](./microsoft-entra-id-integration-guide) (formerly known as Azure Active Directory)
-- [Generic SAML-based IdP](./saml-integration-guide)
+- [Okta (SAML-based)](../org/sso/okta-integration-guide/)
+- Microsoft Entra ID (formerly known as Azure Active Directory)
+  - [SAML-based](./microsoft-entra-id-integration-saml-guide)
+  - [OIDC-based](./microsoft-entra-id-integration-oidc-guide)
+- [Generic SAML](../org/sso/saml-integration-guide/)
+- [Generic OIDC](../org/sso/oidc-integration-guide/)
 
 ## Switching between organizations
 
