--- a/src/content/graphos/org/sso/microsoft-entra-id-integration-saml-guide.mdx
+++ b/src/content/graphos/org/sso/microsoft-entra-id-integration-saml-guide.mdx
@@ -26,7 +26,7 @@ Setup requires at least a [Cloud Application Administrator](https://learn.micros
 <SSOSAMLInfoRequest />
 
 2. Go to your [Microsoft Entra admin center](https://entra.microsoft.com/). Alternatively, you can sign in to the [Azure Portal](http://portal.azure.com/) and then navigate to **Microsoft Entra ID**.
-3. Go to **Applications > Enterprise applications** and select **+New application** in the top menu.
+3. Go to **Identity > Applications > Enterprise applications** and select **+New application** in the top menu.
 4. In the top menu, select **+Create your own application**.
 5. Enter `Apollo GraphOS` as the name of your app. Below, keep the **Integrate any other application you don't find in the gallery (Non-gallery)** option selected. Click **Create**.
 
