--- a/src/content/graphos/enterprise/supergraph-architecture-framework/index.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/index.mdx
@@ -14,7 +14,7 @@ The results of the SAF assessment serve as a roadmap for architecture and platfo
 SAF centers its principles and best practices around five pillars:
 
 - [Operational excellence](./operational-excellence): Efficiently operate, monitor, and manage your supergraph.
-- [Security](./operational-excellence): Protect your data and infrastructure with a defense-in-depth approach.
+- [Security](./security): Protect your data and infrastructure with a defense-in-depth approach.
 - [Reliability](./reliability): Design your supergraph for scale and high availability.
 - [Performance](./performance): Improve your supergraph's request and response performance.
 - [Developer experience](./developer-experience): Boost developer velocity for graph consumers and contributors.
