--- a/src/content/graphos/org/sso/oidc-integration-guide.mdx
+++ b/src/content/graphos/org/sso/oidc-integration-guide.mdx
@@ -1,5 +1,5 @@
 ---
-title: Set up Apollo SSO with an OIDC-based IdP
+title: Set up SSO with an OIDC-based IdP
 subtitle: Configure an OIDC-based identity provider
 description: Configure a OpenID Connect (OIDC) based identity provider as your Apollo GraphOS organization's SSO provider.
 ---
@@ -9,7 +9,6 @@ description: Configure a OpenID Connect (OIDC) based identity provider as your A
 <SSOPreviewNotice />
 
 This guide walks through configuring a generic OpenID Connect (OIDC) based identity provider (IdP) for use with Apollo SSO.
-
 If you use Microsoft Entra ID as your IdP, instead see [this guide](./microsoft-entra-id-integration-oidc-guide/).
 
 <SSOMigrationNotice />
