--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -1,5 +1,5 @@
 ---
-title: Set up SSO with Okta
+title: Set up SAML SSO with Okta
 subtitle: Configure Okta as your GraphOS organization's identity provider
 description: Configure Okta as your Apollo GraphOS organization's SSO provider with this SAML setup guide.
 ---
