--- a/src/content/graphos/org/sso/saml-integration-guide.mdx
+++ b/src/content/graphos/org/sso/saml-integration-guide.mdx
@@ -1,5 +1,5 @@
 ---
-title: Set up Apollo SSO with a SAML-based IdP
+title: Set up SSO with a SAML-based IdP
 subtitle: Configure a SAML-based identity provider
 description: Configure a SAML-based identity provider as your Apollo GraphOS organization's SSO provider.
 ---
@@ -9,7 +9,6 @@ description: Configure a SAML-based identity provider as your Apollo GraphOS org
 <SSOPreviewNotice />
 
 This guide walks through configuring a generic SAML-based identity provider (IdP) for use with Apollo SSO.
-
 If you use Okta or Microsoft Entra ID as your IdP, instead see the corresponding guide for your IdP:
 
 - [Okta](./okta-integration-guide/)
