Update OIDC guides

--- a/src/content/graphos/org/sso/microsoft-entra-id-integration-oidc-guide.mdx
+++ b/src/content/graphos/org/sso/microsoft-entra-id-integration-oidc-guide.mdx
@@ -72,6 +72,7 @@ To complete the configuration, complete the Apollo-provided link provided in ste
 
 - **Client ID**: the **Application (client) ID** you copied
 - **Client Secret**: the secret value you copied
+  - Apollo encrypts this value and stores it securely
 - **Issuer**: the issuer value you copied from the **OpenID Connect metadata document**
 - **Discovery URL**: you don't need to enter this since the **OpenID Connect metadata document** URL follows the standard `/.well-known/openid-configuration` format
 
