--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -6,15 +6,15 @@ description: Configure Okta as your Apollo GraphOS organization's SSO provider w
 
 <SSOPremiumFeature />
 
-<SSOPreviewNotice />
-
-This guide walks through configuring Okta as your GraphOS organization's identity provider (IdP) for SSO. Once you've set up your integration, you need to assign users to it in Okta so they can access GraphOS Studio via SSO.
+This guide walks through configuring Okta as your GraphOS organization's identity provider (IdP) for SAML-based SSO. Once you've set up your integration, you need to assign users to it in Okta so they can access GraphOS Studio via SSO.
 
 <SSOMigrationNotice />
 
 ## Setup
 
-SSO setup has two main steps:
+<SSOPreviewNotice />
+
+SAML-based SSO setup has two main steps:
 
 1. Create a custom Okta app integration for Apollo GraphOS.
 2. Send your Okta app integration's SAML metadata to Apollo.
