--- a/src/content/graphos/org/sso/saml-integration-guide.mdx
+++ b/src/content/graphos/org/sso/saml-integration-guide.mdx
@@ -6,8 +6,6 @@ description: Configure a SAML-based identity provider as your Apollo GraphOS org
 
 <SSOPremiumFeature />
 
-<SSOPreviewNotice />
-
 This guide walks through configuring a generic SAML-based identity provider (IdP) for use with Apollo SSO.
 If you use Okta or Microsoft Entra ID as your IdP, instead see the corresponding guide for your IdP:
 
@@ -18,7 +16,9 @@ If you use Okta or Microsoft Entra ID as your IdP, instead see the corresponding
 
 ## Setup
 
-SSO setup has two main steps:
+<SSOPreviewNotice />
+
+SAML-based SSO setup has two main steps:
 
 1. Create a custom Apollo GraphOS application in your IdP.
 2. Send your application's SAML metadata to Apollo.
