--- a/src/content/shared/sso-migration-notice.mdx
+++ b/src/content/shared/sso-migration-notice.mdx
@@ -2,6 +2,6 @@
 
 - **If you're setting up SSO for GraphOS for the first time**, Apollo highly recommends using the instructions below rather than the [legacy instructions](#legacy-setup). By doing so, you will avoid having to set up SSO again when the legacy method is deprecated.
 
-- **If your organization's SSO was set up before April 2024** according to the legacy instructions we recommend creating a new SSO configuration with the [updated instructions](#setup).
+- **If your organization's SSO was set up before April 2024** according to the legacy instructions, we recommend creating a new SSO configuration with the [updated instructions](#setup).
 
 </Tip>
