--- a/src/content/shared/sso-preview-notice.mdx
+++ b/src/content/shared/sso-preview-notice.mdx
@@ -1,6 +1,5 @@
 <PreviewFeature>
 
-This page contains updated instructions (as of April 2024) for configuring SSO for a GraphOS Studio organization.
-The new SSO setup is currently in [preview](/resources/product-launch-stages#preview).
+These are the latest instructions (as of April 2024) for setting up SSO for a GraphOS Studio organization. This new SSO setup is currently in [preview](/resources/product-launch-stages#preview).
 
 </PreviewFeature>
