--- a/src/content/graphos/cloud-routing/index.mdx
+++ b/src/content/graphos/cloud-routing/index.mdx
@@ -66,7 +66,9 @@ You can view a cloud router's region on its graph's **Overview** page under **Cl
   width="300"
 />
 
-If your Serverless graph is hosted in Chicago you need to [migrate](./serverless/aws-migration/#change-summary) by June 27, 2024.
+<br />
+
+If your Serverless graph is hosted in Chicago you need to [migrate](./serverless/aws-migration/) by June 27, 2024.
 
 </Note>
 
