--- a/src/content/graphos/cloud-routing/serverless/aws-migration.mdx
+++ b/src/content/graphos/cloud-routing/serverless/aws-migration.mdx
@@ -23,9 +23,7 @@ You may need to migrate if:
 
 To check if any of your graphs use cloud routers running on Fly.io, go to [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) and look for the migration alert on the graph's **Overview** page.
 
-[To-do: add screenshot of migration banner]
-
-Cloud routers on Fly.io will continue to operate until July 2, 2024. After this date, any cloud routers on Fly.io will be permanently deleted and graphs using them will no longer respond to requests.
+Cloud routers on Fly.io will continue to operate until June 27, 2024. After this date, any cloud routers on Fly.io will be permanently deleted and graphs using them will no longer respond to requests.
 
 <Tip>
 
@@ -104,12 +102,12 @@ Each variant needs at least one subgraph. If you have multiple subgraphs, [add e
 
 ### Step 3. Setup router configuration
 
-Copy and paste your old router's configuration into your new one. You can access a Serverless cloud router configuration in GraphOS Studio under **Settings > Cloud Router > Router configuration YAML**.
+Copy and paste your old router's configuration into your new one. You can access a cloud router's configuration in GraphOS Studio under **Cloud Router > Configuration**.
 
 <img
   className="screenshot"
   alt="Configuring the cloud router in GraphOS Studio"
-  src="../../img/cloud-routing/configuration-main.jpg"
+  src="../../img/cloud-routing/cloud-router-configuration.jpg"
   width="700"
 />
 
