--- a/src/content/graphos/cloud-routing/serverless/index.mdx
+++ b/src/content/graphos/cloud-routing/serverless/index.mdx
@@ -6,7 +6,7 @@ description: Learn about Apollo GraphOS Serverless cloud routers, including inte
 
 <Note>
 
-Serverless is moving to AWS. If you initialized your Serverless cloud router before May 21, 2024, you need to migrate to keep your cloud router running. [Learn more](./aws-migration).
+Serverless is moving to AWS. If you initialized your Serverless cloud router before May 21, 2024, you may need to migrate to keep your cloud router running. [Learn more](./aws-migration).
 
 </Note>
 
