--- a/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
@@ -90,7 +90,7 @@ Use the **Configuration** tab to manage your cloud router's configuration, inclu
 <img
   className="screenshot"
   alt="The Cloud Router page in GraphOS Studio"
-  src="../../img/cloud-dedicated/dedicated-configuration.png"
+  src="../../img/cloud-routing/cloud-router-configuration.jpg"
 />
 
 ## Step 4. Test and validate
