--- a/src/content/graphos/cloud-routing/index.mdx
+++ b/src/content/graphos/cloud-routing/index.mdx
@@ -50,13 +50,9 @@ They aren't available with Enterprise or legacy Free or Team plans.
 Serverless cloud routers run on shared infrastructure. Dedicated cloud routers run on dedicated infrastructure that you control and scale.
 See the [pricing page](https://www.apollographql.com/pricing/) for more information.
 
-### Cloud router regions
+## Cloud router regions
 
 Serverless cloud routers are hosted in the us-east-1 AWS region. Dedicated cloud routers have a wider [variety of options](./dedicated#runs-on-aws). Region selection for cloud routers is only available on the Dedicated plan. <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">Contact Sales</TrackableLink> to learn more.
-
-<Note>
-
-Some legacy Serverless cloud routers are hosted in Chicago, Illinois.
 You can view a cloud router's region on its graph's **Overview** page under **Cloud Router Details**.
 
 <img
@@ -66,11 +62,12 @@ You can view a cloud router's region on its graph's **Overview** page under **Cl
   width="300"
 />
 
-<br />
+<Caution>
 
-If your Serverless graph is hosted in Chicago you need to [migrate](./serverless/aws-migration/) by June 27, 2024.
+Some legacy Serverless cloud routers are hosted in Chicago, Illinois.
+If your cloud router is hosted in Chicago, you need to [migrate](./serverless/aws-migration/) by June 27, 2024.
 
-</Note>
+</Caution>
 
 ## Cloud router status
 
