--- a/src/content/graphos/cloud-routing/serverless/aws-migration.mdx
+++ b/src/content/graphos/cloud-routing/serverless/aws-migration.mdx
@@ -23,13 +23,12 @@ You may need to migrate if:
 
 To check if any of your graphs use cloud routers running on Fly.io, go to [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) and look for the migration alert on the graph's **Overview** page.
 
+<Caution>
+
 Cloud routers on Fly.io will continue to operate until June 27, 2024. After this date, any cloud routers on Fly.io will be permanently deleted and graphs using them will no longer respond to requests.
-
-<Tip>
-
 Don't hesitate to contact [cloud@apollographql.com](mailto:cloud@apollographql.com) with any migration questions or concerns.
 
-</Tip>
+</Caution>
 
 ## What's changing?
 
@@ -85,13 +84,13 @@ To avoid downtime for clients querying your graph, don't delete the variant that
 To get started, create a new graph or variant in GraphOS Studio. See the [getting started](/graphos/quickstart/cloud/#from-an-existing-account) for details on creating a new graph.
 
 All Serverless cloud routers created on or after May 21, 2024 automatically run on AWS.
-You can confirm your new router is running on AWS by checking that the router region is **AWS us-east-1** on the variant's **Overview** page.
+You can confirm your new router is running on AWS by checking that the router region is **AWS us-east-1** on the variant's **Overview** page under **Cloud Router Details**.
 
 <img
   className="screenshot"
   alt="Variant overview page in GraphOS Studio"
-  src="../../img/cloud-routing/graph-overview.jpg"
-  width="700"
+  src="../../img/cloud-routing/cloud-router-details.jpg"
+  width="300"
 />
 
 Creating a new graph or variant generates a new endpoint URL and graph ref. You'll update these values in later steps.
