--- a/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
@@ -85,12 +85,12 @@ The launch process typically takes 1-2 minutes but may take up to 5 minutes. Dur
 
 Dedicated cloud routers have a separate UI for management and configuration. Open the **Cloud Router** page from the left navigation. This page shows a summary of your cloud router, including its **API endpoint** and **API details**.
 
-Use the **Configuration** tab to manage your cloud router's configuration, including secrets and **Router configuration YAML**. See the [Apollo Router docs](/router/configuration/overview) for more information.
+Use the **Configuration** tab to manage your cloud router's configuration, including **Secrets** and **Router configuration YAML**. See the [Apollo Router docs](/router/configuration/overview) for more information.
 
 <img
   className="screenshot"
   alt="The Cloud Router page in GraphOS Studio"
-  src="../../img/cloud-dedicated/dedicated-configuration.png"
+  src="../../img/cloud-routing/cloud-router-configuration.jpg"
 />
 
 ## Step 4. Test and validate
